--- a/SistemaVentas/src/main/java/com/cashiers/VentanaCajero.form
+++ b/SistemaVentas/src/main/java/com/cashiers/VentanaCajero.form
@@ -444,6 +444,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="$ "/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldSubtotalActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelTotal">
           <Properties>
