optimizando el codigo

--- a/SistemaVentas/src/main/java/com/admin/PrincipalAdmin.form
+++ b/SistemaVentas/src/main/java/com/admin/PrincipalAdmin.form
@@ -563,7 +563,7 @@
         <Container class="javax.swing.JPanel" name="pnlCentro">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+              <Color blue="f4" green="ee" red="ef" type="rgb"/>
             </Property>
           </Properties>
           <Constraints>
@@ -575,12 +575,12 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="675" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="679" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="683" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
