--- a/SistemaVentas/src/main/java/com/admin/ListUsersPanel.form
+++ b/SistemaVentas/src/main/java/com/admin/ListUsersPanel.form
@@ -93,7 +93,7 @@
             </Property>
             <Property name="rowHeight" type="int" value="40"/>
             <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="62" green="a9" red="14" type="rgb"/>
+              <Color blue="cc" green="cc" red="0" type="rgb"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
