--- a/SistemaVentas/src/main/java/com/counter/VentanaContador.form
+++ b/SistemaVentas/src/main/java/com/counter/VentanaContador.form
@@ -228,7 +228,7 @@
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ba" green="56" red="26" type="rgb"/>
+              <Color blue="4d" green="36" red="27" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
