--- a/SistemaVentas/src/main/java/com/admin/PanelUserNew.form
+++ b/SistemaVentas/src/main/java/com/admin/PanelUserNew.form
@@ -673,7 +673,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnInsertImage">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Insertar logo"/>
+        <Property name="text" type="java.lang.String" value="Insertar foto"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInsertImageActionPerformed"/>
